# plane_management

./: .gitignore  CMakeLists.txt  Hypothesis.md  LICENSE  Problem  README  README.md  Report.md
include/: PriorityQueue.h  Queue.h
lib/: CMakeLists.txt  Queue.h  data.h
po/: plane_management.pot  zh_CN.mo  zh_CN.po
src/: CMakeLists.txt  Makefile  PriorityQueue.c  PriorityQueue.h  Queue.c  Queue.h  data.h  gtkitems.c  gtkitems.h  items.c  items.h  landing.c  landing.h  main  main.c  reference.c  runway.h  takeoff.c  takingoff.c  takingoff.h
src/locale/: plane_management.pot  zh_CN.po
